--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "placements-io-api"
 version = "0.0.1"
-description = "Client Library for the Placements.io API"
+description = "Client library for the Placements.io API"
 authors = [
     "Placements.io",
     "Andrew Bowman <abowman@placements.io>",
@@ -16,8 +16,57 @@ httpx = "^0.27.2"
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
 pytest-asyncio = "^0.24.0"
+pytest-httpx = "^0.32.0"
 black = "^24.8.0"
+tox = "^4.23.2"
+coverage = "^7.6.4"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+
+#
+# Pytest
+#
+
+[tool.pytest.ini_options]
+asyncio_default_fixture_loop_scope = "function"
+filterwarnings = [
+    "ignore:.*to upload raw bytes/text content."
+]
+
+
+#
+# Tox
+#
+
+[tool.tox]
+requires = [
+  "tox>=4",
+  "virtualenv>20.2",
+]
+env_list = ["report"]
+
+[tool.tox.env_run_base]
+description = "Run test under {base_python}"
+deps = [
+    "poetry", 
+    "pytest", 
+    "pytest_httpx", 
+    "pytest_asyncio",
+    "pytest_cov",
+]
+pre_commands = [
+    ["poetry", "install", "--dev"]
+]
+
+[tool.tox.env.pytest]
+commands = [
+    ["poetry", "run", "pytest", "--verbose"]
+]
+
+[tool.tox.env.report]
+commands = [
+    ["poetry", "run", "pytest", "--verbose", "--cov=pio"]
+]
