--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "placements-io"
-version = "0.0.1"
+version = "0.0.1-alpha.002"
 license = "Proprietary"
 description = "Placements.io Python Software Development Kit"
 homepage = "https://placements.io"
