--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "placements-io"
-version = "0.0.1-alpha.003"
-license = "Proprietary"
+version = "0.0.1"
+license = "MIT"
 description = "Placements.io Python Software Development Kit"
 homepage = "https://placements.io"
 repository = "https://github.com/placementsapp/pio-python-sdk"
