--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,12 +15,12 @@ packages = [{include = "pio"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
-httpx = "^0.27.2"
+httpx = ">=0.23.3,<0.28.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
 pytest-asyncio = "^0.24.0"
-pytest-httpx = "^0.32.0"
+pytest-httpx = ">=0.21.0,<0.33.0"
 black = "^24.8.0"
 tox = "^4.23.2"
 coverage = "^7.6.4"
