--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ pytest-httpx = ">=0.21.0,<0.33.0"
 black = "^24.8.0"
 tox = "^4.23.2"
 coverage = "^7.6.4"
+pytest-cov = "^6.2.1"
 
 [build-system]
 requires = ["poetry-core"]
